# govai-eu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTES.md  README.md  pyproject.toml
docs/: how-it-works.md  registry-guide.md
examples/: sample_output.md
govai/: __init__.py  classifier.py  cli.py  llm.py  models.py  registry.py  reporter.py
govai/registry/: schema.yaml
govai/registry/tools/: google.yaml  hubspot.yaml  microsoft.yaml
registry/tools/: _template.yaml  salesforce.yaml
tests/: test_classifier.py  test_cli.py  test_llm.py  test_models.py  test_registry.py  test_reporter.py
tests/fixtures/: broken.yaml  sample_tools.csv  sample_tools.txt
